attempt to fix modal iframe on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ bottom: .5em;
 }
 
 
-@media only screen and (max-width: 480px) {
+@media only screen {
 .modal .modal-body {
     max-height: 320px;
     overflow-y: auto;
